Закончила редактирование секции Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -101,17 +101,20 @@
                 <ul class="cards-case">
                     <li class="card-img">
                         <div class="thumb">
-                            <img src="./images/main/design.jpg" alt="Програмирование">
+                            <img src="./images/main/design.jpg" alt="Десктопное приложение">
+                            <p class="inscription">Десктопные приложения</p>
                         </div>                        
                     </li>
                     <li class="card-img">
                         <div class="thumb">
-                            <img src="./images/main/synchronization.jpg" alt="Синхронизация">
+                            <img src="./images/main/synchronization.jpg" alt="Мобильное приложение">
+                            <p class="inscription">Мобильные приложения</p>
                         </div>                        
                     </li>
                     <li class="card-img">
                         <div class="thumb">
-                            <img src="./images/main/design.jpg" alt="Дизайн"> 
+                            <img src="./images/main/design.jpg" alt="Дизайнерские решения">
+                            <p class="inscription">Дизайнерские решения</p> 
                         </div>
                     </li>                                               
                 </ul>
