--- a/portfolio.html
+++ b/portfolio.html
@@ -60,10 +60,14 @@
             </div>
             
             <div class="container portfolio">
-                <ul class="card-set">
-                    <li class="services">
+                <ul class="portfolio-cards">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/web-side.jpg" alt="Веб-сайт"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Технокряк</h2>
@@ -71,9 +75,13 @@
                         </div>                        
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/boxes.jpg" alt="Баскетбол"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -81,9 +89,13 @@
                         </div>                        
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/logo-the-seafood.jpg" alt="Постер ресторана" />
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -91,9 +103,13 @@
                         </div>                        
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
-                            <img src="./images/portfolio/headphones.jpg" alt="Наушники" />
+                            <img src="./images/portfolio/headphones.jpg" alt="Наушники"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Проект Prime</h2>
@@ -101,9 +117,13 @@
                         </div>                       
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
-                            <img src="./images/portfolio/boxes.jpg" alt="Коробочки" width="370" />
+                            <img src="./images/portfolio/boxes.jpg" alt="Коробочки"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Проект Boxes</h2>
@@ -111,9 +131,13 @@
                         </div>                        
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/monitor.jpg" alt="Монитор"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -121,9 +145,13 @@
                         </div>                        
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/magazine.jpg" alt="Журнал"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Издание Limited Edition</h2>
@@ -131,9 +159,13 @@
                         </div>
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/lab.jpg" alt="Название проекта LAB"/>
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         </div>                        
                         <div class="card-content">
                             <h2 class="portfolio-title">Проект LAB</h2>
@@ -141,10 +173,14 @@
                         </div>                        
                     </li>
 
-                    <li class="services">
+                    <li class="portfolio-card-set">
                         <div class="thumb">
                             <img src="./images/portfolio/laptop.jpg" alt="Ноутбук"/>
-                        </div>                        
+                            <div class="overlay">
+                                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>                                          
                         <div class="card-content">
                             <h2 class="portfolio-title">Growing Business</h2>
                             <p class="portfolio-description">Приложение</p>
